# ddatacleans

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/ddatacleans/: __init__.py  cleans_email.py  cleans_phone.py
