[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[project]
name = "ddatacleans"
version = "0.0.1"
authors = [
  { name="Chawanwit", email="chawanwit@data.co.th" },
]
description = "ddata cleans "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHomepage  = "https://github.com/ChawanwitDdata/ddatacleans"